homelab-v4/tekton/ingress-eventlistener.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-eventlistener-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    # Removido cert-manager.io/cluster-issuer pois usamos Cloudflare Tunnel
spec:
  rules:
    - host: tekton-listener.phantombyte.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: el-github-listener
                port:
                  number: 8080
